build_fail_4.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_game
   +- compile exe nyon_game Debug native 2 errors
src\editor\main_editor.zig:463:13: error: unused local variable
        var perf_buf: [64]u8 = undefined;
            ^~~~~~~~
src\property_inspector.zig:163:36: error: use of undeclared identifier 'entity'
            if (world.getComponent(entity, @import("ecs/component.zig").RigidBody)) |rigid_body| {
                                   ^~~~~~
error: 2 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 6 errors
src\editor\main_editor.zig:463:13: error: unused local variable
        var perf_buf: [64]u8 = undefined;
            ^~~~~~~~
src\property_inspector.zig:163:36: error: use of undeclared identifier 'entity'
            if (world.getComponent(entity, @import("ecs/component.zig").RigidBody)) |rigid_body| {
                                   ^~~~~~
src\editor\main_editor.zig:698:30: error: no field or member function named 'endRendering' in 'rendering.RenderingSystem'
        self.rendering_system.endRendering();
        ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
src\rendering.zig:301:29: note: struct declared here
pub const RenderingSystem = struct {
                            ^~~~~~
referenced by:
    renderGeometryNodeEditor: src\editor\main_editor.zig:668:40
    render: src\editor\main_editor.zig:322:61
    5 reference(s) hidden; use '-freference-trace=7' to see all references
src\editor\main_editor.zig:814:34: error: expected type '[]const u8', found '[*:0]const u8'
        raylib.drawText(play_text.ptr, @intFromFloat(width - 50), 8, 14, raylib.Color.white);
                        ~~~~~~~~~^~~~
src\raylib_stub.zig:521:23: note: parameter type declared here
pub fn drawText(text: []const u8, posX: c_int, posY: c_int, fontSize: c_int, color: Color) void {
                      ^~~~~~~~~~
src\editor\material_node_editor.zig:157:66: error: expected type '[*:0]const u8', found '[*]const u8'
                const text_width = raylib.measureText(output.name.ptr, 12);
                                                      ~~~~~~~~~~~^~~~
src\editor\material_node_editor.zig:157:66: note: destination pointer requires '0' sentinel
src\raylib_stub.zig:516:26: note: parameter type declared here
pub fn measureText(text: [*:0]const u8, fontSize: c_int) c_int {
                         ^~~~~~~~~~~~~
src\property_inspector.zig:345:31: error: root source file struct 'fmt' has no member named 'allocPrintZ'
        const x_text = std.fmt.allocPrintZ(self.allocator, "{d:.1}", .{value.x}) catch "0.0";
                       ~~~~~~~^~~~~~~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\fmt.zig:1:1: note: struct declared here
//! String formatting and parsing.
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: 6 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 2 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 6 errors

error: the following build command failed with exit code 1:
.zig-cache\o\de37fdbac9ec7656fa569d7c06b4d76a\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xf03fd51 -Z3429b8d001b40855
